welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:2: error: Unit does not take parameters
 run() {
       ^